--- a/gradle.properties
+++ b/gradle.properties
@@ -7,17 +7,17 @@ org.gradle.daemon=false
 ## Environment Properties
 
 # The Minecraft version must agree with the Forge version to get a valid artifact
-minecraft_version=1.21.3
+minecraft_version=1.20.1
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.21.3,1.22)
+minecraft_version_range=[1.20.1,1.21)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=53.1.1
+forge_version=47.4.10
 # The Forge version range can use any version of Forge as bounds or match the loader version range
-forge_version_range=[0,)
+forge_version_range=[47,)
 # The loader version range can only use the major version of Forge/FML as bounds
-loader_version_range=[0,)
+loader_version_range=[47,)
 # The mapping channel to use for mappings.
 # The default set of supported mapping channels are ["official", "snapshot", "snapshot_nodoc", "stable", "stable_nodoc"].
 # Additional mapping channels can be registered through the "channelProviders" extension in a Gradle plugin.
@@ -35,8 +35,7 @@ loader_version_range=[0,)
 mapping_channel=official
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.21.3
-
+mapping_version=1.20.1
 
 ## Mod Properties
 
@@ -46,7 +45,7 @@ mod_id=tpmod
 # The human-readable display name for the mod.
 mod_name=TP Mod
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved ceaser.k.w@foxmail.com
+mod_license=All Rights Reserved https://github.com/fps1024/tpmod
 # The mod version. See https://semver.org/
 mod_version=1.1.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
