--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,14 @@ plugins {
 version = mod_version
 group = mod_group_id
 
+def side = project.findProperty("side") ?: "client"
+def mcVer = minecraft_version
+def forgeVer = forge_version
+
 base {
-    archivesName = mod_id
+    archivesName = "${mod_id}-${side}-${mcVer}-forge${forgeVer}"
 }
+
 
 // Mojang ships Java 21 to end users in 1.20.5+, so your mod should target Java 21.
 java.toolchain.languageVersion = JavaLanguageVersion.of(21)
